<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RollBuildLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RollBuildActivity" >

 	<TextView
        android:id="@+id/buildroll_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_activity_roll_build"
        android:textSize="40.0sp" />
    
   <RelativeLayout 
	    android:id="@+id/RollBuildBaseLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    tools:context=".RollBuildActivity" >

	    <EditText
	        android:id="@+id/build_exponent_input"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:hint="Exponent"/>
	
	    <EditText
	        android:id="@+id/build_obstacle_input"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/build_exponent_input"
	        android:inputType="number" 
	        android:hint="Obstacle"/>
	      
    	<TextView
	        android:id="@+id/build_shade_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/build_obstacle_input"
	        android:text="@string/diceshade_label" />
	        

   	    <Spinner
	        android:id="@+id/build_shade_spinner"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/build_obstacle_input"
	        android:layout_toRightOf="@+id/build_shade_label"
	        />	    

	    
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RollBuildAddlDiceLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    tools:context=".RollBuildActivity">
        
      	<EditText
	        android:id="@+id/build_addldice_input"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number" 
	        android:hint="Additional Dice"/>
      	
  	    <CheckBox
	        android:id="@+id/build_openended_checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/build_addldice_input"
	        android:text="@string/openended_select" 
	        android:onClick="selectOpenEnded"
	        />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/RollBuildArthaLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    tools:context=".RollBuildActivity">

    	<TextView
	        android:id="@+id/build_boon_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/boonpick_label" />
	        

   	    <Spinner
	        android:id="@+id/build_boon_spinner"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/build_boon_label"
	        />	
  	    
  	    <CheckBox
	        android:id="@+id/build_deeds_checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/build_boon_spinner"
	        android:onClick="selectDeedsSpent"
	        android:text="@string/deeds_select" />  	    
        
  	    
    </RelativeLayout>
    
    <Button
        android:id="@+id/make_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="makeRoll"
        android:text="Roll!" />

</LinearLayout>